perf(index):add features

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     rel="stylesheet" 
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" 
     crossorigin="anonymous">
+    <link rel="stylesheet" href="styles.css">
   <title>Bootstrap</title>
 </head>
 <body>
@@ -29,5 +30,44 @@
       </div>
     </nav>
   </header>
+  <section class="jumbotron jumbotron-fluid">
+    <div class="container py-5">
+      <h1 class="display-4 pt-2 pb-2 text-white">Obtén Premium gratis por 1 mes</h1>
+      <p class="lead py-2 text-white">Después, solo por $ 115.00 al mes. Cancela cuando quieras.</p>
+      <button type="button" class="btn btn-dark">Empezar</button>
+      <button type="button" class="btn-plan btn btn-outline">Ver planes</button> 
+      <br>
+      <br>
+      <span class="text-white pb-3">Se aplican Términos y Condiciones. El mes gratis no está disponible para los usuarios que ya hayan probado Premium.</span>
+    </div>
+  </section>
+
+  <section class="container">
+    <h2 class="text-center mt-4">Beneficios de Premium</h2>
+    <div class="row">
+      <div class="col-md-3 vertical-icon">
+        <img class="vertical-icon__img" src="https://i.scdn.co/image/ab671c3d0000f43009302fbaf6259b4c117c704f" alt="">
+        <h5 class="">Descarga tu música.</h5>
+        <p>Escúchala donde quieras.</p>
+      </div>
+      <div class="col-md-3">
+        <img class="vertical-icon__img" src="https://i.scdn.co/image/ab671c3d0000f43098292b95d24a697c20df5137" alt="">
+        <h5>Reproduce música sin anuncios.</h5>
+        <p>Solo música, sin parar.</p>
+      </div>
+      <div class="col-md-3">
+        <img class="vertical-icon__img" src="https://i.scdn.co/image/ab671c3d0000f4306998d3ffd58aad6da6afdf67" alt="">
+        <h5>Reproduce lo que quieras.</h5>
+        <p>Incluso en dispositivos móviles.</p>
+      </div>
+      <div class="col-md-3">
+        <img class="vertical-icon__img" src="https://i.scdn.co/image/ab671c3d0000f430cd6c528745e510c5be63a012" alt="">
+        <h5>Salta canciones de forma ilimitada.</h5>
+        <p>Solo pasa a la siguiente.</p>
+      </div>
+    </div>
+
+  </section>
+
 </body>
 </html>
